Minor layout issues
Reduce spacing b/w header and tags

Change flex layout options for tags in the header to prevent (a) header
getting overlapped by tags and (b) .tag elements shrinking, making them
illegible

This seems good enough™ for the moment

Related to issue #9

--- a/_harp/css/_components/_card.scss
+++ b/_harp/css/_components/_card.scss
@@ -46,7 +46,7 @@ $card-border-radius: 4px;
   
   > .header {
     .title { @extend %text-size-l; }
-    .tags { @include rem(margin-left, $font-size-xs); }
+    .tags { @include rem(margin-left, map-get($font-sizes,xxxs)); }
   }
   
   > .deck {
@@ -69,12 +69,6 @@ $card-border-radius: 4px;
   }
 
   .tags .tag { margin-top: 1px;}
-  
-  // vertical-align: middle (see .tag) isn't really perfectly centered. This is.
-  .flexbox & .tags {
-    display: flex;
-    align-items: center;
-  }
   
   .menu {
     background-color: tint(palette(gray, x-light), 60%);
