--- a/_harp/css/oslc_enhanced.css
+++ b/_harp/css/oslc_enhanced.css
@@ -485,7 +485,8 @@ meta.oslc-mq-neckbeard-only {
   background-image: -webkit-linear-gradient(bottom, rgba(255, 255, 255, 0) 0%, rgba(102, 102, 102, 0.4) 0%, rgba(102, 102, 102, 0.4) 5%, rgba(255, 255, 255, 0) 5%, rgba(255, 255, 255, 0) 100%);
   background-image: -webkit-gradient(linear, left bottom, left top, from(rgba(255, 255, 255, 0)), color-stop(0%, rgba(102, 102, 102, 0.4)), color-stop(5%, rgba(102, 102, 102, 0.4)), color-stop(5%, rgba(255, 255, 255, 0)), to(rgba(255, 255, 255, 0)));
   background-image: linear-gradient(to top,rgba(255, 255, 255, 0) 0%, rgba(102, 102, 102, 0.4) 0%, rgba(102, 102, 102, 0.4) 5%, rgba(255, 255, 255, 0) 5%, rgba(255, 255, 255, 0) 100%); }
-.flexbox .card .meta {
+.flexbox .card .meta,
+.flexbox .card .tags {
   display: -webkit-box;
   display: -webkit-flex;
   display: -moz-box;
@@ -499,12 +500,20 @@ meta.oslc-mq-neckbeard-only {
   -webkit-flex-wrap: wrap;
       -ms-flex-wrap: wrap;
           flex-wrap: wrap; }
-  .flexbox .card .meta .byline {
-    -webkit-box-flex: 1;
-    -webkit-flex: 1 1 auto;
-       -moz-box-flex: 1;
-        -ms-flex: 1 1 auto;
-            flex: 1 1 auto; }
+.flexbox .card .meta .byline {
+  -webkit-box-flex: 1;
+  -webkit-flex: 1 1 auto;
+     -moz-box-flex: 1;
+      -ms-flex: 1 1 auto;
+          flex: 1 1 auto; }
+.flexbox .card .tags .tag {
+  -webkit-flex-shrink: 0;
+      -ms-flex-negative: 0;
+          flex-shrink: 0; }
+.flexbox .card .header > .flag > .body {
+  -webkit-flex-basis: auto;
+      -ms-flex-preferred-size: auto;
+          flex-basis: auto; }
 @media only screen and (min-width: 64.0625em) {
   .card.primary > .header > .title {
     font-size: 32px;
